refactor: abi, bin for contracts, method

--- a/history
+++ b/history
@@ -5,3 +5,17 @@ eth.getBalance(eth.coinbase)
 miner.stop()
 miner.start()
 miner.stop()
+eth.getBalance(eth.coinbase)
+miner.start()
+eth.mining
+miner.start()
+eth.mining
+miner.stop()
+eth.unlockAccount(eth.accounts[0])
+miner.start()
+eth.getBalance(eth.coinbase)
+miner.start()
+eth.block(04)
+eth.getBlock(0)
+eth.getBalance(eth.coinbase)
+miner.start()
