--- a/history
+++ b/history
@@ -22,3 +22,16 @@ miner.start()
 eth.getBlock(0)
 miner.start()
 eth.getBalance(eth.coinbase)
+miner.start()
+miner.stop()
+miner.start(2)
+miner.stop()
+eth.mining
+miner.start(2)
+miner.stop()
+miner.start(1)
+miner.stop()
+miner.start(4)
+miner.stop()
+miner.start(4)
+miner.stop()
